feat: Enhance trajectory handling with tool call support and update example notebook

--- a/examples/rock-paper-tool-use.ipynb
+++ b/examples/rock-paper-tool-use.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".cell-output-ipywidget-background {\n",
+       "    background-color: transparent !important;\n",
+       "}\n",
+       ":root {\n",
+       "    --jp-widgets-color: var(--vscode-editor-foreground);\n",
+       "    --jp-widgets-font-size: var(--vscode-editor-font-size);\n",
+       "}  \n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<style>\n",
@@ -54,6 +75,7 @@
     "def get_move(chat_completion: ChatCompletion) -> str:\n",
     "    tool_calls = chat_completion.choices[0].message.tool_calls\n",
     "    if tool_calls:\n",
+    "        print(tool_calls[0].function.arguments)\n",
     "        return tool_calls[0].function.arguments\n",
     "    return \"none\"\n",
     "\n",
@@ -105,7 +127,7 @@
     "        for trajectory, chat_completion in zip(trajectories, chat_completions):\n",
     "            trajectory.messages_and_choices.append(chat_completion.choices[0])\n",
     "        move1, move2 = list(map(get_move, chat_completions))\n",
-    "        beats = {\"rock\": \"scissors\", \"paper\": \"rock\", \"scissors\": \"paper\"}\n",
+    "        beats = {\"rock\": \"scissors\", \"paper\": \"rock\", \"scissors\": \"paper\", \"none\": None}\n",
     "        if beats[move1] == move2:\n",
     "            trajectories[0].reward += 1\n",
     "        elif beats[move2] == move1:\n",
