--- a/examples/rock-paper-tool-use.ipynb
+++ b/examples/rock-paper-tool-use.ipynb
@@ -12,30 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".cell-output-ipywidget-background {\n",
-       "    background-color: transparent !important;\n",
-       "}\n",
-       ":root {\n",
-       "    --jp-widgets-color: var(--vscode-editor-foreground);\n",
-       "    --jp-widgets-font-size: var(--vscode-editor-font-size);\n",
-       "}  \n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<style>\n",
@@ -58,6 +37,7 @@
     "import art\n",
     "import asyncio\n",
     "from dotenv import load_dotenv\n",
+    "import json\n",
     "from openai.types.chat.chat_completion import ChatCompletion\n",
     "\n",
     "load_dotenv()\n",
@@ -72,12 +52,17 @@
     "client = model.openai_client()\n",
     "\n",
     "\n",
-    "def get_move(chat_completion: ChatCompletion) -> str:\n",
+    "def get_tool_call_id_and_move(chat_completion: ChatCompletion) -> tuple[str, str]:\n",
     "    tool_calls = chat_completion.choices[0].message.tool_calls\n",
-    "    if tool_calls:\n",
-    "        print(tool_calls[0].function.arguments)\n",
-    "        return tool_calls[0].function.arguments\n",
-    "    return \"none\"\n",
+    "    if not tool_calls:\n",
+    "        return \"n/a\", \"nothing\"\n",
+    "    tool_call = tool_calls[0]\n",
+    "    try:\n",
+    "        return tool_call.id, json.loads(tool_call.function.arguments)[\"move\"]\n",
+    "    except json.JSONDecodeError:\n",
+    "        return tool_call.id, \"nothing\"\n",
+    "    except KeyError:\n",
+    "        return tool_call.id, \"nothing\"\n",
     "\n",
     "\n",
     "async def rollout() -> art.Trajectory:\n",
@@ -126,29 +111,46 @@
     "        )\n",
     "        for trajectory, chat_completion in zip(trajectories, chat_completions):\n",
     "            trajectory.messages_and_choices.append(chat_completion.choices[0])\n",
-    "        move1, move2 = list(map(get_move, chat_completions))\n",
-    "        beats = {\"rock\": \"scissors\", \"paper\": \"rock\", \"scissors\": \"paper\", \"none\": None}\n",
+    "        (id1, move1), (id2, move2) = list(\n",
+    "            map(get_tool_call_id_and_move, chat_completions)\n",
+    "        )\n",
+    "        beats = {\n",
+    "            \"rock\": \"scissors\",\n",
+    "            \"paper\": \"rock\",\n",
+    "            \"scissors\": \"paper\",\n",
+    "            \"nothing\": None,\n",
+    "        }\n",
     "        if beats[move1] == move2:\n",
     "            trajectories[0].reward += 1\n",
     "        elif beats[move2] == move1:\n",
     "            trajectories[1].reward += 1\n",
     "        if max(t.reward for t in trajectories) > 2:\n",
     "            break\n",
-    "        trajectories[0].messages_and_choices.append(\n",
-    "            {\n",
-    "                \"role\": \"user\",\n",
-    "                \"content\": \"The other player played \"\n",
-    "                + move2\n",
-    "                + \". What will your next move be?\",\n",
-    "            }\n",
+    "        trajectories[0].messages_and_choices.extend(\n",
+    "            (\n",
+    "                {\n",
+    "                    \"role\": \"tool\",\n",
+    "                    \"tool_call_id\": id1,\n",
+    "                    \"content\": f\"The other player played {move2}.\",\n",
+    "                },\n",
+    "                {\n",
+    "                    \"role\": \"user\",\n",
+    "                    \"content\": \"What will your next move be?\",\n",
+    "                },\n",
+    "            )\n",
     "        )\n",
-    "        trajectories[1].messages_and_choices.append(\n",
-    "            {\n",
-    "                \"role\": \"user\",\n",
-    "                \"content\": \"The other player played \"\n",
-    "                + move1\n",
-    "                + \". What will your next move be?\",\n",
-    "            }\n",
+    "        trajectories[1].messages_and_choices.extend(\n",
+    "            (\n",
+    "                {\n",
+    "                    \"role\": \"tool\",\n",
+    "                    \"tool_call_id\": id2,\n",
+    "                    \"content\": f\"The other player played {move1}.\",\n",
+    "                },\n",
+    "                {\n",
+    "                    \"role\": \"user\",\n",
+    "                    \"content\": \"What will your next move be?\",\n",
+    "                },\n",
+    "            )\n",
     "        )\n",
     "    return trajectories[0]\n",
     "\n",
