feat: Refine rock-paper-tool-use notebook with enhanced agent instructions and metrics tracking

--- a/examples/rock-paper-tool-use.ipynb
+++ b/examples/rock-paper-tool-use.ipynb
@@ -90,28 +90,40 @@
     "        art.Trajectory(\n",
     "            messages_and_choices=[\n",
     "                {\n",
+    "                    \"role\": \"system\",\n",
+    "                    \"content\": \"You are a rock-paper-scissors playing agent. Use the play_move function tool to declare your moves.\",\n",
+    "                },\n",
+    "                {\n",
     "                    \"role\": \"user\",\n",
-    "                    \"content\": \"You are playing rock-paper-scissors with another player. What will your first move be?\",\n",
-    "                }\n",
+    "                    \"content\": \"What will your first move be?\",\n",
+    "                },\n",
     "            ],\n",
     "            reward=0,\n",
+    "            metrics={\n",
+    "                \"num_rounds\": 0,\n",
+    "                \"rock\": 0,\n",
+    "                \"paper\": 0,\n",
+    "                \"scissors\": 0,\n",
+    "                \"nothing\": 0,\n",
+    "            },\n",
     "        )\n",
     "        for _ in range(2)\n",
     "    ]\n",
-    "    while True:\n",
+    "    for _ in range(10):\n",
     "        chat_completions = await asyncio.gather(\n",
     "            *[\n",
     "                client.chat.completions.create(\n",
     "                    messages=trajectory.messages(),\n",
     "                    model=model,\n",
     "                    tools=tools,\n",
+    "                    max_completion_tokens=100,\n",
     "                )\n",
     "                for trajectory, model in zip(trajectories, (MODEL_NAME, BASE_MODEL))\n",
     "            ]\n",
     "        )\n",
     "        for trajectory, chat_completion in zip(trajectories, chat_completions):\n",
     "            trajectory.messages_and_choices.append(chat_completion.choices[0])\n",
-    "        (id1, move1), (id2, move2) = list(\n",
+    "        (id0, move0), (id1, move1) = list(\n",
     "            map(get_tool_call_id_and_move, chat_completions)\n",
     "        )\n",
     "        beats = {\n",
@@ -120,18 +132,22 @@
     "            \"scissors\": \"paper\",\n",
     "            \"nothing\": None,\n",
     "        }\n",
-    "        if beats[move1] == move2:\n",
+    "        if beats[move0] == move1:\n",
     "            trajectories[0].reward += 1\n",
-    "        elif beats[move2] == move1:\n",
+    "        elif beats[move1] == move0:\n",
     "            trajectories[1].reward += 1\n",
+    "        for trajectory in trajectories:\n",
+    "            trajectory.metrics[\"num_rounds\"] += 1\n",
+    "        trajectories[0].metrics[move0] += 1\n",
+    "        trajectories[1].metrics[move1] += 1\n",
     "        if max(t.reward for t in trajectories) > 2:\n",
     "            break\n",
     "        trajectories[0].messages_and_choices.extend(\n",
     "            (\n",
     "                {\n",
     "                    \"role\": \"tool\",\n",
-    "                    \"tool_call_id\": id1,\n",
-    "                    \"content\": f\"The other player played {move2}.\",\n",
+    "                    \"tool_call_id\": id0,\n",
+    "                    \"content\": f\"The other player played {move1}.\",\n",
     "                },\n",
     "                {\n",
     "                    \"role\": \"user\",\n",
@@ -143,8 +159,8 @@
     "            (\n",
     "                {\n",
     "                    \"role\": \"tool\",\n",
-    "                    \"tool_call_id\": id2,\n",
-    "                    \"content\": f\"The other player played {move1}.\",\n",
+    "                    \"tool_call_id\": id1,\n",
+    "                    \"content\": f\"The other player played {move0}.\",\n",
     "                },\n",
     "                {\n",
     "                    \"role\": \"user\",\n",
@@ -156,7 +172,9 @@
     "\n",
     "\n",
     "for i in range(await model.get_step(), 1_000):\n",
-    "    trajectories = await art.gather_trajectories(rollout() for _ in range(64))\n",
+    "    trajectories = await art.gather_trajectories(\n",
+    "        (rollout() for _ in range(64)), max_exceptions=64\n",
+    "    )\n",
     "    await model.train(\n",
     "        [art.TrajectoryGroup(trajectories)],\n",
     "        config=art.TrainConfig(learning_rate=5e-5),\n",
