chore: Quick commit

--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -12,9 +12,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<style>\n",
+              ".cell-output-ipywidget-background {\n",
+              "    background-color: transparent !important;\n",
+              "}\n",
+              ":root {\n",
+              "    --jp-widgets-color: var(--vscode-editor-foreground);\n",
+              "    --jp-widgets-font-size: var(--vscode-editor-font-size);\n",
+              "}  \n",
+              "</style>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "%%html\n",
         "<style>\n",
@@ -35,6 +56,7 @@
       "outputs": [],
       "source": [
         "import art\n",
+        "import httpx\n",
         "from dotenv import load_dotenv\n",
         "import openai\n",
         "\n",
@@ -46,7 +68,10 @@
         "    project=\"yes-no-maybe\",\n",
         "    base_model=\"Qwen/Qwen2.5-7B-Instruct\",\n",
         ")\n",
-        "await model.register(art.LocalAPI())\n",
+        "try:\n",
+        "    await model.register(art.API())\n",
+        "except httpx.HTTPStatusError as e:\n",
+        "    print(e.response.content.decode())\n",
         "\n",
         "\n",
         "async def rollout(client: openai.AsyncOpenAI, prompt: str) -> art.Trajectory:\n",
@@ -73,8 +98,10 @@
         "    return art.Trajectory(messages_and_choices=[*messages, choice], reward=reward)\n",
         "\n",
         "\n",
+        "with_quotes = lambda w: f\"'{w}'\"\n",
+        "\n",
         "prompts = [\n",
-        "    f\"{prefix} with {', '.join([f\"'{w}'\" if use_quotes else w for w in words]) if len(words) == 3 else f'{words[0]}' + (f' or {words[1]}' if len(words) > 1 else '')}\"\n",
+        "    f\"{prefix} with {', '.join([with_quotes(w) if use_quotes else w for w in words]) if len(words) == 3 else f'{words[0]}' + (f' or {words[1]}' if len(words) > 1 else '')}\"\n",
         "    for prefix in [\"respond\", \"just respond\"]\n",
         "    for use_quotes in [True, False]\n",
         "    for words in [\n",
