--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -2,9 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -12,9 +21,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<style>\n",
+              ".cell-output-ipywidget-background {\n",
+              "    background-color: transparent !important;\n",
+              "}\n",
+              ":root {\n",
+              "    --jp-widgets-color: var(--vscode-editor-foreground);\n",
+              "    --jp-widgets-font-size: var(--vscode-editor-font-size);\n",
+              "}  \n",
+              "</style>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "%%html\n",
         "<style>\n",
@@ -73,22 +103,28 @@
         "    return art.Trajectory(messages_and_choices=[*messages, choice], reward=reward)\n",
         "\n",
         "\n",
-        "prompts = [\n",
-        "    f\"{prefix} with {', '.join([f\"'{w}'\" if use_quotes else w for w in words]) if len(words) == 3 else f'{words[0]}' + (f' or {words[1]}' if len(words) > 1 else '')}\"\n",
-        "    for prefix in [\"respond\", \"just respond\"]\n",
-        "    for use_quotes in [True, False]\n",
-        "    for words in [\n",
-        "        [\"yes\", \"no\", \"maybe\"],\n",
-        "        [\"maybe\", \"yes\", \"no\"],\n",
-        "        [\"no\", \"yes\", \"maybe\"],\n",
-        "        [\"yes\", \"maybe\", \"no\"],\n",
-        "        [\"yes\", \"no\"],\n",
-        "        [\"maybe\", \"no\"],\n",
-        "        [\"no\", \"maybe\"],\n",
-        "        [\"no\", \"yes\"],\n",
-        "        [\"yes\", \"no\"],\n",
-        "    ]\n",
-        "]\n",
+        "prompts = []\n",
+        "for prefix in [\"respond\", \"just respond\"]:\n",
+        "    for use_quotes in [True, False]:\n",
+        "        for words in [\n",
+        "            [\"yes\", \"no\", \"maybe\"],\n",
+        "            [\"maybe\", \"yes\", \"no\"],\n",
+        "            [\"no\", \"yes\", \"maybe\"],\n",
+        "            [\"yes\", \"maybe\", \"no\"],\n",
+        "            [\"yes\", \"no\"],\n",
+        "            [\"maybe\", \"no\"],\n",
+        "            [\"no\", \"maybe\"],\n",
+        "            [\"no\", \"yes\"],\n",
+        "            [\"yes\", \"no\"],\n",
+        "        ]:\n",
+        "            if len(words) == 3:\n",
+        "                word_list = \", \".join([f\"'{w}'\" if use_quotes else w for w in words])\n",
+        "                prompt = f\"{prefix} with {word_list}\"\n",
+        "            else:\n",
+        "                part1 = f\"'{words[0]}'\" if use_quotes else words[0]\n",
+        "                part2 = f\" or '{words[1]}'\" if use_quotes else f\" or {words[1]}\" if len(words) > 1 else \"\"\n",
+        "                prompt = f\"{prefix} with {part1}{part2}\"\n",
+        "            prompts.append(prompt)\n",
         "\n",
         "openai_client = model.openai_client()\n",
         "for _ in range(await model.get_step(), 1_000):\n",
