--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -172,16 +172,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:torchao.kernel.intmm:Warning: Detected no triton, on systems without Triton certain kernels will not work\n"
-          ]
-        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -193,7 +186,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "00ff0baba10e4e41be34ec26d01b47ca",
+              "model_id": "acff9db364204fdc9ee5e4134840b2de",
               "version_major": 2,
               "version_minor": 0
             },
@@ -218,7 +211,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\u001b[0m⚙︎ Job submitted, ID: 26\n"
+            "\u001b[0m⚙︎ Job submitted, ID: 1\n"
           ]
         },
         {
@@ -236,10 +229,10 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "\u001b[36mJob ID: \u001b[1m26\u001b[0m\n",
+            "\u001b[36mJob ID: \u001b[1m1\u001b[0m\n",
             "📋 Useful Commands\n",
-            "\u001b[2m├── \u001b[0mTo cancel the job:\t\t\u001b[1msky cancel art 26\u001b[0m\n",
-            "\u001b[2m├── \u001b[0mTo stream job logs:\t\t\u001b[1msky logs art 26\u001b[0m\n",
+            "\u001b[2m├── \u001b[0mTo cancel the job:\t\t\u001b[1msky cancel art 1\u001b[0m\n",
+            "\u001b[2m├── \u001b[0mTo stream job logs:\t\t\u001b[1msky logs art 1\u001b[0m\n",
             "\u001b[2m└── \u001b[0mTo view job queue:\t\t\u001b[1msky queue art\u001b[0m\n",
             "\n",
             "Cluster name: art\n",
@@ -254,7 +247,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ba07a5e840024ca49af45c76d69a9c9a",
+              "model_id": "83b8735f141d44c0822f425700d8796f",
               "version_major": 2,
               "version_minor": 0
             },
@@ -286,7 +279,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Using base_url: http://216.81.245.26:37244\n"
+            "Using base_url: http://216.81.245.26:30375\n"
           ]
         }
       ],
@@ -305,18 +298,26 @@
         "\n",
         "random.seed(42)\n",
         "\n",
-        "api = art.API(cluster_name=\"art\")"
+        "api = art.SkypilotAPI(cluster_name=\"art\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Registering model with server\n",
+            "To view logs, run: 'uv run sky logs art'\n"
+          ]
+        },
+        {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "de2bdd5fb2984a8a98c40d5c9a4e6583",
+              "model_id": "bc39a95db34a4e3280f77759c116fb17",
               "version_major": 2,
               "version_minor": 0
             },
@@ -339,7 +340,6 @@
         }
       ],
       "source": [
-        "\n",
         "class CustomConfig(BaseModel):\n",
         "    litellm_model_name: str | None = None\n",
         "\n",
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -503,13 +503,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "6892c521eda04fea9413be7ef5a58de5",
+              "model_id": "8813ea6203354911b199215fde5987bf",
               "version_major": 2,
               "version_minor": 0
             },
@@ -523,7 +523,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "95fbcd7be6764ca993e6630483db5a83",
+              "model_id": "9dff6cc8d1434d989b3362658642b7ca",
               "version_major": 2,
               "version_minor": 0
             },
@@ -537,7 +537,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "625f70ac18e34e8aa35ceb7537692254",
+              "model_id": "e2970dd9d0644f66b97940dd842212f8",
               "version_major": 2,
               "version_minor": 0
             },
@@ -547,108 +547,6 @@
           },
           "metadata": {},
           "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "77d188675f1e4aeb991ae3344747444e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "train:   0%|          | 0/4 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "03a5875faf0b4e28b4d2b5881bb97cdc",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "gather:   0%|          | 0/48 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b51a5bf31fa748e785bdf5041ce852b8",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "train:   0%|          | 0/4 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ccb826c7f34f443b9532ceae569da6c5",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "gather:   0%|          | 0/48 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "d97e1a8271d945da99b1ee7e7db2fc2e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "train:   0%|          | 0/4 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4a635686dcb74a4b85fd27512eb735c3",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "gather:   0%|          | 0/48 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "ename": "CancelledError",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mCancelledError\u001b[0m                            Traceback (most recent call last)",
-            "File \u001b[0;32m~/playground/openpipe/agent-reinforcement-training/src/art/trajectories.py:169\u001b[0m, in \u001b[0;36mTrajectoryGroup.__new__.<locals>._\u001b[0;34m(exceptions)\u001b[0m\n\u001b[1;32m    168\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 169\u001b[0m     trajectory \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m future\n\u001b[1;32m    170\u001b[0m     trajectories\u001b[38;5;241m.\u001b[39mappend(trajectory)\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.10.13/lib/python3.10/asyncio/tasks.py:567\u001b[0m, in \u001b[0;36mas_completed.<locals>._wait_for_one\u001b[0;34m()\u001b[0m\n\u001b[1;32m    566\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_wait_for_one\u001b[39m():\n\u001b[0;32m--> 567\u001b[0m     f \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m done\u001b[38;5;241m.\u001b[39mget()\n\u001b[1;32m    568\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m f \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    569\u001b[0m         \u001b[38;5;66;03m# Dummy value from _on_timeout().\u001b[39;00m\n",
-            "File \u001b[0;32m~/.pyenv/versions/3.10.13/lib/python3.10/asyncio/queues.py:159\u001b[0m, in \u001b[0;36mQueue.get\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    158\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 159\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m getter\n\u001b[1;32m    160\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n",
-            "\u001b[0;31mCancelledError\u001b[0m: ",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mCancelledError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28;01mawait\u001b[39;00m model\u001b[38;5;241m.\u001b[39mget_step(), \u001b[38;5;241m300\u001b[39m):\n\u001b[0;32m----> 2\u001b[0m     train_groups \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m art\u001b[38;5;241m.\u001b[39mgather_trajectory_groups(\n\u001b[1;32m      3\u001b[0m         (\n\u001b[1;32m      4\u001b[0m             art\u001b[38;5;241m.\u001b[39mTrajectoryGroup(\n\u001b[1;32m      5\u001b[0m                 rollout(model, i, is_validation\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m48\u001b[39m)\n\u001b[1;32m      6\u001b[0m             )\n\u001b[1;32m      7\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      8\u001b[0m         ),\n\u001b[1;32m      9\u001b[0m         pbar_desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgather\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     10\u001b[0m     )\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m model\u001b[38;5;241m.\u001b[39mdelete_checkpoints()\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m model\u001b[38;5;241m.\u001b[39mtrain(train_groups, config\u001b[38;5;241m=\u001b[39mart\u001b[38;5;241m.\u001b[39mTrainConfig(learning_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-4\u001b[39m))\n",
-            "File \u001b[0;32m~/playground/openpipe/agent-reinforcement-training/src/art/gather.py:30\u001b[0m, in \u001b[0;36mgather_trajectory_groups\u001b[0;34m(groups, pbar_desc, pbar_total_completion_tokens, max_exceptions)\u001b[0m\n\u001b[1;32m     28\u001b[0m     total \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[38;5;28mgetattr\u001b[39m(g, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_num_trajectories\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m1\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m g \u001b[38;5;129;01min\u001b[39;00m groups)\n\u001b[1;32m     29\u001b[0m     context\u001b[38;5;241m.\u001b[39mpbar \u001b[38;5;241m=\u001b[39m tqdm\u001b[38;5;241m.\u001b[39mtqdm(desc\u001b[38;5;241m=\u001b[39mpbar_desc, total\u001b[38;5;241m=\u001b[39mtotal)\n\u001b[0;32m---> 30\u001b[0m     result_groups \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m future\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m context\u001b[38;5;241m.\u001b[39mpbar \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     32\u001b[0m     context\u001b[38;5;241m.\u001b[39mpbar\u001b[38;5;241m.\u001b[39mclose()\n",
-            "\u001b[0;31mCancelledError\u001b[0m: "
-          ]
         }
       ],
       "source": [
