Add example of .down

--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -547,6 +547,174 @@
           },
           "metadata": {},
           "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "b436cc40425d42b0b5a8d9aa9c6c2e24",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "train:   0%|          | 0/3 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "6402ff5749e8489f90137d1fdb82550c",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather:   0%|          | 0/48 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "8cf4604b1a5545afbf712f933cb671a2",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "train:   0%|          | 0/4 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "e2989926f2e8498e80c2b5de66e108f0",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather:   0%|          | 0/48 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "7539879059054d3196bbce70f3fbce9c",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "train:   0%|          | 0/4 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "7ecccaff71c84678851faf01ae0f113a",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather:   0%|          | 0/48 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "6b8c9194ef0c4fb698124e80582d0b8a",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "train:   0%|          | 0/4 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "b9675ed69f8b4e09814cc22b56bd6cc5",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather:   0%|          | 0/48 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "25190048a8754547bef290428fcc0e51",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "train:   0%|          | 0/4 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "cda0b9a4689b4894a8b7a2e9e9ddf3fd",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather:   0%|          | 0/48 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "caa8865774064d938ab900c43f1aa09a",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "train:   0%|          | 0/4 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "2fc2945a68404d6fa6b34342f52086e8",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "gather:   0%|          | 0/48 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -873,6 +1041,18 @@
         "    promises.append(log_comparison_model(comparison_model))\n",
         "\n",
         "await asyncio.gather(*promises)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "DESTROY_AFTER_RUN = False\n",
+        "\n",
+        "if DESTROY_AFTER_RUN:\n",
+        "    api.down()"
       ]
     }
   ],
