Add async initialize_cluster

--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -172,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -244,7 +244,8 @@
         "\n",
         "random.seed(42)\n",
         "\n",
-        "api = art.SkypilotAPI(cluster_name=\"art4\", art_version=\".\", env_path=\".env\")"
+        "api = art.SkypilotAPI(cluster_name=\"art4\")\n",
+        "await api.initialize_cluster(art_version=\".\", env_path=\".env\")"
       ]
     },
     {
