--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -2,9 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 24,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -12,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -51,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -172,9 +181,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "OpenPipe client initialized\n",
+            "Cluster art2 exists, using it...\n",
+            "Art server task already running, using it...\n",
+            "Using base_url: http://216.81.245.26:26086\n"
+          ]
+        }
+      ],
       "source": [
         "import art\n",
         "from dotenv import load_dotenv\n",
@@ -202,22 +222,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Registering model with server\n",
-            "To view logs, run: 'uv run sky logs art2'\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "class CustomConfig(BaseModel):\n",
         "    litellm_model_name: str | None = None\n",
         "\n",
         "model = art.TrainableModel(\n",
-        "    name=\"005\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-3B-Instruct\"\n",
+        "    name=\"007\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-1.5B-Instruct\"\n",
         ")\n",
         "await model.register(api)\n",
         "\n",
@@ -242,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -398,46 +409,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "35004b6495154cdeb889b95dc064a517",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "gather gpt-4o-mini:   0%|          | 0/12 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "94ba1b27db994cd5b04aab1f1ead8963",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "gather gpt-4o:   0%|          | 0/12 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/plain": [
-              "[None, None]"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import asyncio\n",
         "\n",
@@ -466,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
