Await api.down()

--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -438,14 +438,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "DESTROY_AFTER_RUN = False\n",
         "\n",
         "if DESTROY_AFTER_RUN:\n",
-        "    api.down()"
+        "    await api.down()"
       ]
     }
   ],
