Move openai_client

--- a/examples/tic_tac_toe/tic-tac-toe.ipynb
+++ b/examples/tic_tac_toe/tic-tac-toe.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -189,9 +189,9 @@
           "output_type": "stream",
           "text": [
             "OpenPipe client initialized\n",
-            "Cluster art2 exists, using it...\n",
+            "Cluster art5 exists, using it...\n",
             "Art server task already running, using it...\n",
-            "Using base_url: http://216.81.245.26:26086\n"
+            "Using base_url: http://141.193.30.26:45141\n"
           ]
         }
       ],
@@ -214,7 +214,7 @@
         "# get path to root of repo\n",
         "root_path = get_repo_root_path()\n",
         "\n",
-        "api = art.SkypilotAPI(cluster_name=\"art2\")\n",
+        "api = art.SkypilotAPI(cluster_name=\"art5\")\n",
         "await api.initialize_cluster(art_version=root_path, env_path=f\"{root_path}/.env\")"
       ]
     },
@@ -222,13 +222,22 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Registering model with server\n",
+            "To view logs, run: 'uv run sky logs art5'\n"
+          ]
+        }
+      ],
       "source": [
         "class CustomConfig(BaseModel):\n",
         "    litellm_model_name: str | None = None\n",
         "\n",
         "model = art.TrainableModel(\n",
-        "    name=\"007\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-1.5B-Instruct\"\n",
+        "    name=\"008\", project=\"tic-tac-toe\", base_model=\"Qwen/Qwen2.5-1.5B-Instruct\"\n",
         ")\n",
         "await model.register(api)\n",
         "\n",
@@ -260,10 +269,7 @@
         "import art\n",
         "import openai\n",
         "import time\n",
-        "from litellm import acompletion\n",
         "import math\n",
-        "\n",
-        "from art.utils.litellm import convert_litellm_choice_to_openai\n",
         "\n",
         "\n",
         "@art.retry(exceptions=(openai.LengthFinishReasonError,))\n",
@@ -300,9 +306,8 @@
         "\n",
         "        try:\n",
         "            model_id = model.config.litellm_model_name if isinstance(model.config, CustomConfig) else f\"hosted_vllm/{model.name}\"\n",
-        "            chat_completion = await acompletion(\n",
-        "                base_url=model.base_url,\n",
-        "                api_key=model.api_key,\n",
+        "            client = model.openai_client()\n",
+        "            chat_completion = await client.chat.completions.create(\n",
         "                model=model_id,\n",
         "                messages=messages,\n",
         "                max_completion_tokens=128,\n",
@@ -337,7 +342,7 @@
         "        except Exception as e:\n",
         "            print(f\"Error reporting to OpenPipe: {e}\")\n",
         "\n",
-        "        choice = convert_litellm_choice_to_openai(chat_completion.choices[0])\n",
+        "        choice = chat_completion.choices[0]\n",
         "        content = choice.message.content\n",
         "        assert isinstance(content, str)\n",
         "        trajectory.messages_and_choices.append(choice)\n",
@@ -391,7 +396,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "for i in range(await model.get_step(), 3):\n",
+        "for i in range(await model.get_step(), 1):\n",
         "    train_groups = await art.gather_trajectory_groups(\n",
         "        (\n",
         "            art.TrajectoryGroup(\n",
